Almost done blog page and matched styling for most pages

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="aboutus.html">Start Here</a>
                     <img src="images/money_matters-tree.png" alt="Light green money tree" class="back-text-img">
                 </div>
-                <img src="images/hero-icon.png" alt="Monney Matters Logo">
+                <img src="images/hero-icon.png" alt="MonneyMatters Logo">
             </div>
             <section class="section1">
             
@@ -194,7 +194,7 @@
             </nav>
             <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
             <div class="social-media">
-                <h2>Follow Us!</h2>
+                <h3>Follow Us!</h3>
                 <div class="social-links">
                     <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/black-instagram-logo.png" alt=""></a>
                     <a href=""><img src="" alt=""></a>
