--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -26,7 +26,7 @@
         </header>
 
 <section class="blog-hero">
-    <h1>MoneyMatters Blog</h1>
+    <h1>MoneyMatters. Blogs</h1>
     <p>Financial tips, tools, and real-world advice — for everyone.</p>
   </section>
   
@@ -51,6 +51,65 @@
   
     <!-- Add more blog cards as needed -->
   </section>
+
+  <section class="section4" id="join-us">
+    <h2>Get Connected</h2>
+    <h3>Enter Your Email</h3>
+    <div class="connection-container">
+        <div>
+            <a href="">
+            <img src="../images/moneymatters-logo.png" alt="MoneyMatters Logo">
+            <h3>Join the Community & Get Plugged In</h3>
+            <p>DISCORD LINK</p>
+            </a>
+        </div>
+
+        <div class="form-container">
+            <div>
+                <h3>Join the MoneyMatters Community!</h3>
+            </div>
+            <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
+                <div class="row">
+                  <div class="col">
+                    <input type="text" name="first_name" class="form-control" placeholder="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" name="last_name" class="form-control" placeholder="Last name">
+                  </div>
+                </div>
+                <div class="row" id="email">
+                    <input type="text" name="email" class="form-control" placeholder="Email">
+                </div>
+                <button type="submit" class="submit-btn">Submit</button>
+              </form>
+        </div>
+    </div>
+</section>
+
+<footer>
+<p>MoneyMatters.</p>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="tools.html">Tools</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="blogs/blogs-home.html">Blogs</a>
+</nav>
+
+<div class="social-media">
+    <h3>Follow Us!</h3>
+    <div class="social-links">
+        <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../images/black-instagram-logo.png" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+    </div>
+</div>
+
+<div class="credits">
+    <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
+</div>
+</footer>
+
+<script src="scripts/hamburger.js"></script>
 
     </body>
 
