added facebook links and then added basic budget tool file link for download

--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -96,8 +96,8 @@
                 <a href="">Blogs</a>
             </nav>
             <div class="social-media">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+                <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/black-instagram-logo.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="" alt="Facebook"></a>
                 <a href=""><img src="" alt=""></a>
             </div>
 
