--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -52,7 +52,7 @@
                   </div>
                   
                 <img src="../../images/basic-budget-laptop.png" alt="Basic Budgeting Tool">
-                <a href="" class="download-button">Download</a>
+                <a href="../files/Basic Budget Tool.xlsx" class="download-button">Download</a>
             </section>
 
             <section class="final" id="join-us">
@@ -97,8 +97,8 @@
                 <a href="">Blogs</a>
             </nav>
             <div class="social-media">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+                <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/black-instagram-logo.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="" alt="Facebook"></a>
                 <a href=""><img src="" alt=""></a>
             </div>
 
