--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -52,7 +52,7 @@
                   </div>
                   
                 <img src="../../images/basic-budget-laptop.png" alt="Basic Budgeting Tool">
-                <a href="../files/Basic Budget Tool.xlsx" class="download-button">Download</a>
+                <a href="../files/Basic Budget Tool.xlsx" download class="download-button">Download</a>
             </section>
 
             <section class="final" id="join-us">
