added facebook and made smaller on footer

--- a/tools.html
+++ b/tools.html
@@ -35,8 +35,8 @@
             <section class="section1">
                 <img src="images/money_matters-piggybank.png" alt="Piggy Bank image">
                 <h1>Financial Tools.</h1>
-                <p>You’re in the right spot!
-                    Below are simple, effective & dynamic tools that provide insights into your financial well being. It’s fast to tell if you’re on track with your spending, savings & investing goals.</p>
+                <p><span class="bold">You’re in the right spot!</span>
+                    Below are <span class="underline">simple, effective & dynamic tools</span> that provide insights into your financial well being. It’s fast to tell if you’re on track with your spending, savings & investing goals.</p>
             </section>
 
             <section class="section2">
@@ -59,7 +59,7 @@
                             <h3><a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning Tool</a></h3>
                             <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards <span class="italics">financial stability.</span></p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="" alt="">
+                        <img src="images/retirement-laptop.png" alt="Retirement Planning Tool">
                     </div>
                     <a href="individual-tools/basic-tools/basic-retirement-tool.html" class="download-button">Download</a>
                 </div>
@@ -161,8 +161,8 @@
             <div class="social-media">
                 <h3>Follow Us!</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/black-instagram-logo.png" alt=""></a>
-                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/IGLOGO.png" alt=""></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="images/fbasset.png" alt="Facebook"></a>
                     <a href=""><img src="" alt=""></a>
                 </div>
             </div>
