--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             <div class="social-media">
                 <h3>Follow Us!</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/black-instagram-logo.png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/IGLOGO.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="images/fbasset.png" alt="Facebook"></a>
                     <a href=""><img src="" alt=""></a>
                 </div>
             </div>
