--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -97,11 +97,13 @@
                 <a href="">Blogs</a>
             </nav>
             <div class="social-media">
-                <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/black-instagram-logo.png" alt="Instagram"></a>
-                <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="" alt="Facebook"></a>
-                <a href=""><img src="" alt=""></a>
+                <h3>Follow Us!</h3>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="../../images/fbasset.png" alt="Facebook"></a>
+                    <a href=""><img src="" alt=""></a>
+                </div>
             </div>
-
             <div class="credits">
                 <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
             </div>
