Added hamburger to individual pages

--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -15,23 +15,30 @@
     <body>
         <header>
             <div class="top-bar"></div>
-            <a href="../index.html"><p>MoneyMatters.</p></a>
-            <nav class="top">
-                <a href="../index.html">Home</a>
-                <a href="../tools.html">Tools</a>
-                <a href="../aboutus.html">About Us</a>
-                <a href="blogs-home.html" class="blog-link">Blogs</a>
-                <a href="#join-us" class="block-link">Get Connected!</a>
-            </nav>
-        </header>
+                <a href="index.html"><p>MoneyMatters.</p></a>
 
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+
+                <nav class="top show" id="mobileMenu">
+                        <a href="../../index.html">Home</a>
+                        <a href="../../tools.html">Tools</a>
+                        <a href="../../aboutus.html">About Us</a>
+                        <a href="../../blogs/blogs-home.html" class="blog-link">Blogs</a>
+                    <a href="#join-us" class="block-link">Get Connected!</a>
+                </nav>
+        </header>
 <section class="blog-hero">
     <h1>MoneyMatters. Blogs</h1>
     <p>Financial tips, tools, and real-world advice — for everyone.</p>
   </section>
   
   <section class="blog-posts">
-    <div class="blog-card">
+    <h2>Coming Soon!</h2>
+    <!--<div class="blog-card">
       <h2 class="blog-title">How to Budget Your Money</h2>
       <p class="blog-excerpt">Simple steps to start controlling your money today and build a better future.</p>
       <a href="blog-post-1.html" class="read-more">Read More</a>
@@ -47,7 +54,7 @@
       <h2 class="blog-title">Top 5 Financial Mistakes to Avoid</h2>
       <p class="blog-excerpt">Avoid these common traps that can set back your financial health.</p>
       <a href="blog-post-3.html" class="read-more">Read More</a>
-    </div>
+    </div> -->
   
     <!-- Add more blog cards as needed -->
   </section>
@@ -57,7 +64,7 @@
     <h3>Enter Your Email</h3>
     <div class="connection-container">
         <div>
-            <a href="">
+            <a href="https://discord.com/invite/DCWFBPxh">
             <img src="../images/moneymatters-logo.png" alt="MoneyMatters Logo">
             <h3>Join the Community & Get Plugged In</h3>
             <p>DISCORD LINK</p>
@@ -109,6 +116,7 @@
 </div>
 </footer>
 
+<script src="../individual-tools-scripts/drop-down-text.js"></script>
 <script src="scripts/hamburger.js"></script>
 
     </body>
