--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
-                        <a href="">
+                        <a href="https://discord.com/invite/DCWFBPxh">
                         <img src="images/moneymatters-logo.png" alt="">
                         <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
