--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -13,14 +13,21 @@
     <body>
         <header>
             <div class="top-bar"></div>
-            <a href="../../index.html"><p>MoneyMatters.</p></a>
-            <nav class="top">
-                <a href="../../index.html">Home</a>
-                <a href="../../tools.html">Tools</a>
-                <a href="../../aboutus.html">About Us</a>
-                <a href="" class="blog-link">Blogs</a>
-                <a href="#join-us" class="block-link">Get Connected!</a>
-            </nav>
+                <a href="index.html"><p>MoneyMatters.</p></a>
+
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+
+                <nav class="top show" id="mobileMenu">
+                        <a href="../../index.html">Home</a>
+                        <a href="../../tools.html">Tools</a>
+                        <a href="../../aboutus.html">About Us</a>
+                        <a href="../../blogs/blogs-home.html" class="blog-link">Blogs</a>
+                    <a href="#join-us" class="block-link">Get Connected!</a>
+                </nav>
         </header>
         <main>
             <section class="section1">
@@ -50,7 +57,7 @@
                   </div>
 
                 <img src="../../images/basic-investment-laptop.png" alt="Basic Investment Tool">
-                <a href="" class="download-button">Download</a>
+                <a href="https://docs.google.com/spreadsheets/u/1/d/19eVgUzvTuu0mPU0_3W_9WkS0-Z7P1TegxKM2F8NcCIs/copy?usp=sharing" class="download-button">Download</a>
             </section>
 
             <section class="final" id="join-us">
@@ -58,7 +65,7 @@
                 <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
-                        <a href="">
+                        <a href="https://discord.com/invite/DCWFBPxh">
                         <img src="../../images/moneymatters-logo.png" alt="">
                         <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
@@ -110,6 +117,7 @@
 
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
+        <script src="../../scripts/hamburger.js"></script>
     </body>
 
 </html>
