--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -24,10 +24,10 @@
                   </div>
 
                 <nav class="top show" id="mobileMenu">
-                        <a href="../../index.html">Home</a>
-                        <a href="../../tools.html">Tools</a>
-                        <a href="../../aboutus.html">About Us</a>
-                        <a href="../../blogs/blogs-home.html" class="blog-link">Blogs</a>
+                        <a href="../index.html">Home</a>
+                        <a href="../tools.html">Tools</a>
+                        <a href="../aboutus.html">About Us</a>
+                        <a href="../blogs/blogs-home.html" class="blog-link">Blogs</a>
                     <a href="#join-us" class="block-link">Get Connected!</a>
                 </nav>
         </header>
