resource links open a new tab

--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
                     <div class="links-container">
                         <div>
                             <h3>What is Financial Planning?</h3>
-                            <a href="https://www.youtube.com/watch?v=pd29VYF6e-U">
+                            <a href="https://www.youtube.com/watch?v=pd29VYF6e-U" target="_blank">
                                 https://www.youtube.com/watch?v=pd29VYF6e-U</a>
                         </div>
                         <div>
                             <h3>SEC Guidance</h3>
-                            <a href="https://www.investor.gov/free-financial-planning-tools">https://www.investor.gov/free-financial-planning-tools</a>
+                            <a href="https://www.investor.gov/free-financial-planning-tools" target="_blank">https://www.investor.gov/free-financial-planning-tools</a>
                         </div>
                         <div>
                             <h3>IRS Tax Tools</h3>
-                            <a href="https://www.irs.gov/help/ita">https://www.irs.gov/help/ita</a>
+                            <a href="https://www.irs.gov/help/ita" target="_blank">https://www.irs.gov/help/ita</a>
                         </div>
                     </div>
 
