--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -116,8 +116,7 @@
 </div>
 </footer>
 
-<script src="../individual-tools-scripts/drop-down-text.js"></script>
-<script src="scripts/hamburger.js"></script>
+<script src="../scripts/hamburger.js"></script>
 
     </body>
 
