added target blanks to most links and added text hover styling to Discord link

--- a/individual-tools/advanced-tools/advanced-investment-tool.html
+++ b/individual-tools/advanced-tools/advanced-investment-tool.html
@@ -67,7 +67,7 @@
                 <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
-                        <a href="https://discord.com/invite/DCWFBPxh">
+                        <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
                         <img src="../../images/moneymatters-logo.png" alt="">
                         <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
@@ -106,14 +106,14 @@
             <div class="social-media">
                 <h3>Follow Us!</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="../../images/fbasset.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr" target="_blank"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr" target="_blank"><img src="../../images/fbasset.png" alt="Facebook"></a>
                     <a href=""><img src="" alt=""></a>
                 </div>
             </div>
 
             <div class="credits">
-                <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
+                <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/" target="_blank">Ambitious Marketing Solutions</a></p>
             </div>
 
             <div class="disclaimer">
