--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -58,7 +58,7 @@
                   </div>
                   
                 <img src="../../images/net-worth-calculator-laptop.png" alt="Basic Budgeting Tool">
-                <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" class="download-button">Download</a>
+                <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" class="download-button" target="_blank">Download</a>
             </section>
 
             <section class="final" id="join-us">
@@ -66,7 +66,7 @@
                 <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
-                        <a href="https://discord.com/invite/DCWFBPxh">
+                        <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
                         <img src="../../images/moneymatters-logo.png" alt="">
                         <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
@@ -105,15 +105,15 @@
             <div class="social-media">
                 <h3>Follow Us!</h3>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr"><img src="../../images/IGLOGO.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr" target="_blank"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr" target="_blank"><img src="../../images/IGLOGO.png" alt="Facebook"></a>
                     <a href=""><img src="" alt=""></a>
                 </div>
             </div>
 
 
             <div class="credits">
-                <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
+                <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/" target="_blank">Ambitious Marketing Solutions</a></p>
             </div>
 
             <div class="disclaimer">
