added retirement tool indiv page quadrant

--- a/individual-tools/basic-tools/basic-retirement-tool.html
+++ b/individual-tools/basic-tools/basic-retirement-tool.html
@@ -117,8 +117,29 @@
                     </p>
                   </div>
                   
-                <img src="" alt="Basic Retirement Tool">
-                <a href="" class="download-button">Download</a>
+                  <section class="tool-grid">
+                    <div class="tool-card">
+                      <img src="images/tool1.png" alt="Single and Working">
+                      <h2>Single and Working</h2>
+                      <a href="downloads/tool1.xlsx" class="download-button">Download</a>
+                    </div>
+                    <div class="tool-card">
+                      <img src="images/tool2.png" alt="Single and Retired">
+                      <h2>Single and Retired</h2>
+                      <a href="downloads/tool2.xlsx" class="download-button">Download</a>
+                    </div>
+                    <div class="tool-card">
+                      <img src="images/tool3.png" alt="Married and Working">
+                      <h2>Married and Working</h2>
+                      <a href="downloads/tool3.xlsx" class="download-button">Download</a>
+                    </div>
+                    <div class="tool-card">
+                      <img src="images/tool4.png" alt="Married and Retired">
+                      <h2>Married and Retired</h2>
+                      <a href="downloads/tool4.xlsx" class="download-button">Download</a>
+                    </div>
+                  </section>
+                  
             </section>
 
             <section class="final" id="join-us">
