almost done website

--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -77,16 +77,16 @@
                   
                 <div class="dropdown-details" id="dropdownContent">
                     <p>
-                        The Advanced Budget Tool helps to record, visualize, and make recommendations based on spending patterns.
+                        The <span class="green">Advanced Budget Tool</span> helps to record, visualize, and make recommendations based on spending patterns.
 
                         <ul>
-                            <li>Adjust the black cells with white font to record your information (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
+                            <li>Adjust the <span class="black-white">black cells with white font</span> to record your information (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
 
                             <li>Notice the monthly trend bar charts relating to each expense. Do certain expenses spike during different times of the year? How can your average monthly spending help you project spending for next year?</li>
 
-                            <li>On the “Analysis” tab, note an automated recommended budget based on your income. These spending recommendations are helpful as a frame of reference, not an exact figure for what works for your household. In a similar manner, the automated saver tool recommends how much your household can save annually by cutting down on key expenses. Also, note the recommend savings breakdown for future investing.</li>
+                            <li>On the “<span class="lightblue">Analysis</span>” tab, note an automated recommended budget based on your income. These spending recommendations are helpful as a frame of reference, not an exact figure for what works for your household. In a similar manner, the automated saver tool recommends how much your household can save annually by cutting down on key expenses. Also, note the recommend savings breakdown for future investing.</li>
 
-                            <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to share this information with a trusted financial advisor to help you make the right choices to improve your financial health.</li>
+                            <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to <span class="bold">share this information with a trusted financial advisor</span> to help you make the right choices to improve your financial health.</li>
 
                         </ul>
                         THIS IS NOT FINANCIAL ADVICE. INVESTMENTS HAVE RISK. MONEYMATTERS IS NOT RESPONSIBLE FOR ANY DECISION YOU MAKE BASED ON THE USE OF THESE TOOLS
