--- a/tools.html
+++ b/tools.html
@@ -72,7 +72,7 @@
                 <img src="images/money_matters-piggybank.png" alt="Piggy Bank image">
                 <h1>Financial Tools.</h1>
                 <p><span class="bold">You’re in the right spot!</span>
-                    Below are <span class="underline">simple, effective & dynamic tools</span> that provide insights into your financial well being. It’s fast to tell if you’re on track with your spending, savings & investing goals.</p>
+                    Below are <span class="underline">simple, effective & dynamic tools</span> that provide insights into your financial well being. It’s fast to tell if you’re on track with your <span class="italics">spending, savings & investing goals.</span></p>
             </section>
 
             <section class="section2">
@@ -119,7 +119,7 @@
                         </div>
                         <img src="images/net-worth-calculator-laptop.png" alt="Net Worth Calculator Tool">
                     </div>
-                    <a href="individual-tools/basic-tools/basic-investment-tool .html" class="download-button">Download</a>
+                    <a href="individual-tools/basic-tools/net-worth-calculator.html" class="download-button">Download</a>
                 </div>
             </section>
 
