slowly finishing final edits

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                     <p class="onep1">Learn how to use your money effectively.</p>
                     <p class="onep2">This site was started by two college friends who believe access to powerful financial tools should be FREE and easy to use for EVERYONE.</p>
                     <a href="aboutus.html">Start Here</a>
-                    <img src="images/money_matters-tree.png" alt="Light green money tree" class="back-text-img">
                 </div>
                 <img src="images/hero-icon.png" alt="MonneyMatters Logo">
             </div>
@@ -150,20 +149,17 @@
             </section>
 
             <section class="section4" id="join-us">
-                <h2>Get Connected</h2>
-                <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
                         <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
-                        <img src="images/moneymatters-logo.png" alt="">
-                        <h3>Join the Community & Get Plugged In</h3>
-                        <p>DISCORD LINK</p>
+                            <p>DISCORD LINK</p>
+                            <img src="images/moneymatters-logo.png" alt="MoneyMatters. Logo">
                         </a>
                     </div>
 
                     <div class="form-container">
                         <div>
-                            <h3>Join the MoneyMatters Community!</h3>
+                            <h3>Join the MoneyMatters. Community!</h3>
                         </div>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
