added periods to moneymatters.

--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -101,19 +101,16 @@
             </section>
 
             <section class="final" id="join-us">
-                <h2>Get Connected</h2>
-                <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
                         <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
-                        <img src="../../images/moneymatters-logo.png" alt="">
-                        <h3>Join the Community & Get Plugged In</h3>
-                        <p>DISCORD LINK</p>
+                            <p>DISCORD LINK</p>
+                            <img src="../../images/moneymatters-logo.png" alt="">
                         </a>
                     </div>
 
                     <div class="form-container">
-                        <h3>Join the MoneyMatters Community!</h3>
+                        <h3>Join the MoneyMatters. Community!</h3>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
