--- a/aboutus.html
+++ b/aboutus.html
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="form-container">
-                        <h3>Join the MoneyMatters Community!</h3>
+                        <h3>Join the MoneyMatters. Community!</h3>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
