--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -100,20 +100,17 @@
   </section>
 
   <section class="section4" id="join-us">
-    <h2>Get Connected</h2>
-    <h3>Enter Your Email</h3>
     <div class="connection-container">
         <div>
             <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
+                <p>DISCORD LINK</p>
             <img src="../images/moneymatters-logo.png" alt="MoneyMatters Logo">
-            <h3>Join the Community & Get Plugged In</h3>
-            <p>DISCORD LINK</p>
             </a>
         </div>
 
         <div class="form-container">
             <div>
-                <h3>Join the MoneyMatters Community!</h3>
+                <h3>Join the MoneyMatters. Community!</h3>
             </div>
             <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                 <div class="row">
