--- a/tools.html
+++ b/tools.html
@@ -133,7 +133,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budget Tool</a></h3>
-                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money.</p> <!--<a href="">Explanation Video</a></p>-->
+                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. This tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-budget-laptop.png" alt="Advanced Budget Excel Tool">
                     </div>
