--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -53,7 +53,7 @@
     <body>
         <header>
             <div class="top-bar"></div>
-                <a href="index.html"><p>MoneyMatters.</p></a>
+                <a href="../../index.html"><p>MoneyMatters.</p></a>
 
                 <div class="hamburger">
                     <span></span>
