added drop down for tools link on header

--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,18 @@
 
             <nav class="top show" id="mobileMenu">
                 <a href="index.html">Home</a>
-                <a href="tools.html">Tools</a>
+                
+                <div class="hoverdown" id="toolsHoverdown">
+                  <a href="tools.html" id="toolsToggle">Tools</a>
+                  <div class="hoverdown-menu">
+                      <a href="individual-tools/basic-tools/basic-budget-tool.html">Basic Budgeting</a>
+                      <a href="individual-tools/basic-tools/basic-investment-tool.html">Investment Management</a>
+                      <a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning</a>
+                      <a href="individual-tools/basic-tools/net-worth-calculator.html">Net Worth Calculator</a>
+                      <a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
+                      <a href="individual-tools/advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                  </div>
+              </div>
                 <a href="aboutus.html">About Us</a>
                 <a href="blogs/blogs-home.html" class="blog-link">Blogs</a>
                 <a href="#join-us" class="block-link">Get Connected!</a>
@@ -184,6 +195,7 @@
         </footer>
 
         <script src="scripts/hamburger.js"></script>
+        <script src="scripts/tools-links-dropdown.js"></script>
         
     </body>
 
