--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -63,7 +63,18 @@
 
                 <nav class="top show" id="mobileMenu">
                         <a href="../../index.html">Home</a>
-                        <a href="../../tools.html">Tools</a>
+                        
+                        <div class="hoverdown" id="toolsHoverdown">
+                            <a href="../../tools.html" id="toolsToggle">Tools</a>
+                            <div class="hoverdown-menu">
+                                <a href="basic-budget-tool.html">Basic Budgeting</a>
+                                <a href="basic-investment-tool .html">Investment Management</a>
+                                <a href="basic-retirement-tool.html">Retirement Planning</a>
+                                <a href="net-worth-calculator.html">Net Worth Calculator</a>
+                                <a href="../advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
+                                <a href="../advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                            </div>
+                        </div>
                         <a href="../../aboutus.html">About Us</a>
                         <a href="../../blogs/blogs-home.html" class="blog-link">Blogs</a>
                     <a href="#join-us" class="block-link">Get Connected!</a>
@@ -72,7 +83,7 @@
         <main>
             <section class="section1">
                 <h1>Basic Investment Tool.</h1>
-                <p class="first-p"></p>
+                <p class="first-p">The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p>
                 
                 <div class="how-to-container">
                     <p class="how-to-text">Quick Start</p>
@@ -164,6 +175,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/tools-links-dropdown.js"></script>
     </body>
 
 </html>
