--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -63,7 +63,18 @@
 
                 <nav class="top show" id="mobileMenu">
                         <a href="../../index.html">Home</a>
-                        <a href="../../tools.html">Tools</a>
+                        
+                        <div class="hoverdown" id="toolsHoverdown">
+                            <a href="../../tools.html" id="toolsToggle">Tools</a>
+                            <div class="hoverdown-menu">
+                                <a href="../basic-tools/basic-budget-tool.html">Basic Budgeting</a>
+                                <a href="../basic-tools/basic-investment-tool.html">Investment Management</a>
+                                <a href="../basic-tools/basic-retirement-tool.html">Retirement Planning</a>
+                                <a href="../basic-tools/net-worth-calculator.html">Net Worth Calculator</a>
+                                <a href="../advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
+                                <a href="../advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                            </div>
+                        </div>
                         <a href="../../aboutus.html">About Us</a>
                         <a href="../../blogs/blogs-home.html" class="blog-link">Blogs</a>
                     <a href="#join-us" class="block-link">Get Connected!</a>
@@ -72,7 +83,7 @@
         <main>
             <section class="section1">
                 <h1>Advanced Budget Tool.</h1>
-                <p class="first-p">The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
+                <p class="first-p">This tool is for people who want in-depth analysis of their annual spending patterns. This tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money.</p>
                 
                 <div class="how-to-container">
                     <p class="how-to-text">Quick Start</p>
@@ -166,6 +177,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/tools-links-dropdown.js"></script>
     </body>
 
 </html>
